2004-12-17 Seiichi SATO <ssato@sh.rim.or.jp>

	* doc/en/PROTOCOL: updated. (#1084176)

2004-12-09 MINAMI Hirokazu <minami@mistfall.net>

	*  minor code cleanup.

2004-12-09 MINAMI Hirokazu <minami@mistfall.net>

	*  mkf/lib/, kiklib/src/kik_debug.c: minor code cleanup.
	
2004-12-09 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_im_candidate_screen.c: fixed a syntax error inside #ifndef
	USE_IM_PLUGIN. (Thanks to SHIOTA Shoichi for sending a patch)

2004-12-06 MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_window_manager.c: pointer should be initialized by NULL. 
	* xwindow/x_screen.c, xwindow/x_im_candidate_screen.c:
	  minor code cleanup.
	* tools/mlconfig/*.c: use kiklib/*.h instead of standard headers
	  for better memory usage tracking.

2004-12-03 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/w3mmlconfig/Makefile.in: /usr/bin/perl -> @PERL@

2004-11-28 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/version.h.in: 2.9.1 -> 2.9.1 post

2004-11-28 Seiichi SATO <ssato@sh.rim.or.jp>

	* 2.9.1 released.
	  (tag "rel-2_9_1)

	* configure.in, mlterm.spec, xwindow/version.h.in, doc/en/ReleaseNote:
	  updated.

2004-11-27 Seiichi SATO <ssato@sh.rim.or.jp>

	* doc/en/PLATFORM: updated. (Thanks to MURASE, Masaki)

2004-11-25 MINAMI Hirokazu <minami@mistfall.net>

	* tool/mlconfig/mc_im.c: fixed typo.

2004-11-25 MINAMI Hirokazu <minami@mistfall.net>

	* common/c_intl.h: removed "#define const " which seems to be useless.
	* tool/mlconfig/*.c: tried to be -Wall clean.

2004-11-25 Seiichi SATO <ssato@sh.rim.or.jp>

	* mlterm.spec:
	- fixed #1072304
	- FHS compliance

2004-11-21 Seiichi SATO <ssato@sh.rim.or.jp>

	* doc/en/PLATFORM: updated supported platforms.

2004-11-21 Seiichi SATO <ssato@sh.rim.or.jp>

	* mlterm/ml_term_manager.c (sig_child): if(pid == -1) --> if(pid <= 0)

2004-11-21 Seiichi SATO <ssato@sh.rim.or.jp>

	* kiklib/configure.in, kiklib/src/kik_config.h.in: added check for
	stdint.h.

	* inputmethod/iiimf/im_iiimf.c: